--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 </head>
 
 <body>
-    <script type="text/javascript">
 
+        <div>
+            <h1>The Psychic Game </h1>
+            <p>Guess What letter I'm think of </p>
+            <p id="wins" >Wins:</p>
+            <p id="losses" >Losses:</p>
+            <p id="left">Guesses Left:</p>
+            <p id="guesses">Guesses so far:</p>
+        </div>
 
-
-
-    </script>
+    <script src="Assets/javascript/game.js"></script>
 </body>
 
 </html>
